[package]
name = "moo-transport"
version = "0.1.0"
edition = "2021"
authors = ["Danny Dulai <danny@roonlabs.com>"]
description = "Implementation of the MOO protocol, an HTTP-like bidirectional message protocol"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tokio-tungstenite = { version = "0.23", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
tokio-test = "0.4"

[features]
default = ["websocket"]
websocket = ["tokio-tungstenite"]
